# gym_app

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml
backend/: alembic.ini  pyproject.toml
backend/src/: main.py
backend/src/api/admin/: router.py
backend/src/api/common/: pagination.py  streaming.py
backend/src/api/public/: health.py  invitations.py  portal.py
backend/src/core/: celery_app.py  config.py  crypto.py  db.py  lang_detect.py  logging.py  metrics.py  realtime.py  security.py  storage.py  taskiq_app.py  text_decode.py  useragents.py
backend/src/domain/ai/: __init__.py  access.py  crud.py  service.py
backend/src/domain/app_settings/: service.py
backend/src/domain/audit/: service.py
backend/src/domain/auth/: service.py
backend/src/domain/content_engine/: __init__.py  campaign.py  parsing.py  runs.py  service.py
backend/src/domain/csv_inputs/: __init__.py  service.py
backend/src/domain/dashboard/: service.py
backend/src/domain/invitations/: service.py
backend/src/domain/postings/: service.py  verify.py
backend/src/domain/project_domains/: __init__.py  service.py
backend/src/domain/projects/: service.py
backend/src/domain/proxies/: service.py
backend/src/domain/queue/: __init__.py  service.py
backend/src/domain/reuse/: __init__.py  service.py
backend/src/domain/site_events/: __init__.py  service.py
backend/src/domain/supplier_access/: service.py
backend/src/domain/system_health/: __init__.py  service.py
backend/src/domain/text_links/: __init__.py  service.py
backend/src/domain/texts/: __init__.py  service.py
backend/src/domain/users/: service.py
backend/src/domain/wp_batches/: service.py
backend/src/domain/wp_links/: __init__.py  service.py
backend/src/domain/wp_post_ops/: __init__.py  service.py
backend/src/infrastructure/: cf_transport.py  concurrency.py  rate_limit.py
backend/src/migrations/: env.py
backend/src/scripts/: backfill_link_fields.py  backfill_texts.py  reset_super_admin_password.py  seed.py
backend/tests/: conftest.py  test_ai.py  test_ai_crud.py  test_auth.py  test_autobind_domains.py  test_campaign.py  test_concurrency.py  test_content_engine.py  test_cred_status.py  test_csv_inputs.py  test_csv_parse.py  test_drip.py  test_generate_item.py  test_health.py  test_inject_link.py  test_link_hopping.py  test_link_placement.py  test_manual_gen_flow.py  test_originals_api.py  test_post_date.py  test_post_item_standalone.py  test_post_verify.py  test_project_stats.py  test_queue_snapshot.py  test_rate_limit.py  test_realtime.py  test_require_page_access.py  test_role_detection.py  test_run_max_posts_per_site.py  test_spin.py  test_spin_run.py  test_text_links.py  test_texts.py  test_users.py
deploy/: DEPLOY.md  (+5 more)
(+225 files in other folders)
